# deepsql

./: .gitignore  :memory:  ALGORITHM_ROBUSTNESS_ANALYSIS.md  BUILD_PYTHON.md  CURRENT_STATUS.md  Cargo.toml  END_TO_END_SQL_WORKING.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  MVP_SUBSET_COMPLETE.md  PATH_TO_10_OUT_OF_10.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE_3_SUMMARY.txt  PHASE_A_100_COMPLETE.md  PHASE_A_BREAKTHROUGH_SESSION.md  PHASE_A_COMPLETE.md  PHASE_A_FINAL_STATUS.md  PHASE_A_PARTIAL_COMPLETE.md  PHASE_A_SESSION_SUMMARY.md  PHASE_A_WEEK1_DAY2_COMPLETE.md  PHASE_A_WEEK1_PLAN.md  PHASE_B_AGGREGATES_COMPLETE.md  PHASE_B_KICKOFF.md  PHASE_B_SESSION_SUMMARY.md  PHASE_B_WEEK1_WHERE_COMPLETE.md  PRD.md  PROJECT_COMPLETE.md  QUICKSTART.md  (+7 more)
examples/: python_demo.py  sql_demo.rs
python/deepsql/: __init__.py
src/: engine.rs  error.rs  lib.rs  locking.rs  main.rs  sql_engine.rs  transaction.rs  types.rs
src/catalog/: manager.rs  mod.rs  schema.rs
src/cli/: commands.rs  formatter.rs  mod.rs  repl.rs
src/execution/: delete.rs  insert.rs  limit.rs  mod.rs  order_by.rs  select.rs  update.rs
src/index/: index_btree.rs  manager.rs  mod.rs
src/planner/: builder.rs  compiler.rs  logical.rs  mod.rs  optimizer.rs  physical.rs  plan_cache.rs  statistics.rs
src/python/: mod.rs
src/sql/: lexer.rs  mod.rs  parser.rs  tokens.rs
src/storage/: file_format.rs  mod.rs  page.rs  pager.rs  record.rs
src/vm/: evaluator.rs  executor.rs  mod.rs  opcode.rs
src/wal/: checkpoint.rs  frame.rs  mod.rs  wal.rs  (+1 more)
tests/: aggregate_tests.rs  cli_tests.rs  constraint_tests.rs  create_insert_tests.rs  debug_select.rs  end_to_end_test.rs  execution_tests.rs  index_basic_tests.rs  limit_offset_tests.rs  order_by_tests.rs  sql_execution_tests.rs  sql_parser_tests.rs  storage_tests.rs  test_python_bindings.py  transaction_basic_tests.rs  update_delete_tests.rs  update_where_debug.rs  wal_tests.rs  where_clause_test.rs  where_debug.rs
(+16 files in other folders)
