[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "deepsql"
version = "0.1.0"
description = "DeepSQL - A modern embedded SQL database in Rust with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "DeepSQL Team" }
]
keywords = ["database", "sql", "embedded", "btree", "acid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/deepskilling/deepsql"
Repository = "https://github.com/deepskilling/deepsql"
Documentation = "https://github.com/deepskilling/deepsql/blob/main/README.md"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "deepsql._deepsql"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

